# app/Http/Controllers/Users/UsersController.php
@@ -1,81 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Users;
-
-use App\Http\Requests\Users\UserStoreRequest;
-use App\Http\Resources\Users\UserResource;
-use App\Models\User\User;
-use App\Services\Users\UserService;
-use Illuminate\Http\Request;
-use App\Http\Controllers\Controller;
-
-class UsersController extends Controller
-{
-    /** @var UserService */
-    private $userService;
-
-    public function __construct(UserService $userService)
-    {
-        $this->userService = $userService;
-    }
-
-    /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function index()
-    {
-        //
-    }
-
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  UserStoreRequest
-     * @return \Illuminate\Http\Response
-     */
-    public function store(UserStoreRequest $request)
-    {
-        return response()->json(
-            (new UserResource($this->userService->store($request->validated())))
-                ->additional(['statusCode' => 201])
-                ->response()
-                ->getData(true)
-        );
-    }
-
-    /**
-     * Display the specified resource.
-     *
-     * @param  \App\Models\User  $User
-     * @return \Illuminate\Http\Response
-     */
-    public function show(User $User)
-    {
-        //
-    }
-
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  \App\Models\User  $User
-     * @return \Illuminate\Http\Response
-     */
-    public function update(Request $request, User $User)
-    {
-        //
-    }
-
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  \App\Models\User  $User
-     * @return \Illuminate\Http\Response
-     */
-    public function destroy(User $User)
-    {
-        //
-    }
-}
